# ImageMetalling

./: .gitignore  LICENSE  Podfile  README.md
ImageMetalling-00/ImageMetalling-00/: AppDelegate.swift  IMPSaturationFilter.metal  IMPSaturationView.swift  IMPSaturationViewController.swift
ImageMetalling-00/ImageMetalling-00.xcodeproj/: project.pbxproj
ImageMetalling-01/ImageMetalling-01/: AppDelegate.swift  IMPSHLFilter.metal  IMPSHLView.swift  IMPSHLViewController.swift  ViewController.swift
ImageMetalling-01/ImageMetalling-01.xcodeproj/: project.pbxproj
ImageMetalling-02/: Podfile
ImageMetalling-02/ImageMetalling-02/: AppDelegate.swift  IMPCommonMetal.h  IMPCurvedSHLFilter.metal  IMPSHLFilter.metal  IMPSHLView.swift  IMPSHLViewController.swift  IMPShaderTypes.h  ImageMetalling-02-Bridging-Header.h  ImageMetalling-02-mainMetal.metal  ViewController.swift
ImageMetalling-02/ImageMetalling-02.xcodeproj/: project.pbxproj
ImageMetalling-02/ImageMetalling-02.xcworkspace/: contents.xcworkspacedata
ImageMetalling-03/: Podfile
ImageMetalling-03/ImageMetalling-03/: IMPMetal_main.metal  IMPMetalaGramFilter.swift  Info.plist  ViewController.swift
ImageMetalling-03/ImageMetalling-03.xcodeproj/: project.pbxproj
ImageMetalling-03/ImageMetalling-03.xcworkspace/: contents.xcworkspacedata
ImageMetalling-04/: Podfile
ImageMetalling-04/ImageMetalling-04/: AppDelegate.swift  IMPMetal_main.metal  ImageMetalling-04-Bridging-Header.h  ViewController.swift
ImageMetalling-04/ImageMetalling-04.xcodeproj/: project.pbxproj
ImageMetalling-04/ImageMetalling-04.xcworkspace/: contents.xcworkspacedata
ImageMetalling-05/: Podfile
ImageMetalling-05/ImageMetalling-05/: AppDelegate.swift  IMPHistogram.swift  IMPHistogramAnalizer.swift  IMPHistogramAnalyzer.swift  IMPHistogramAverageSolver.swift  IMPHistogramConstatnts.h  IMPHistogramRangeSolver.swift  IMPHistogramTypes.h  IMPMetal_main.metal  IMPMetalaGramFilter.swift  ImageMetalling-05-Bridging-Header.h  Info.plist  ViewController.swift
ImageMetalling-05/ImageMetalling-05.xcodeproj/: project.pbxproj
ImageMetalling-05/ImageMetalling-05.xcworkspace/: contents.xcworkspacedata
ImageMetalling-06/ImageMetalling-06/: AppDelegate.swift  ViewController.swift
ImageMetalling-06/ImageMetalling-06.xcodeproj/: project.pbxproj
ImageMetalling-06/ImageMetalling-06.xcworkspace/: contents.xcworkspacedata
ImageMetalling-07/: Podfile
ImageMetalling-07/IMPlayground.playground/: Contents.swift
ImageMetalling-07/ImageMetalling-07/: AppDelegate.swift  CGRect+IMProcessing.swift  IMPDocument.swift  IMPHSVExampleFilter.swift  IMPHistogramTypes.swift  IMPMenuHandler.swift  IMPScrollView.swift  IMPTestFilter.swift  ImageMetalling-07-Bridging-Header.h  Info.plist  ViewController.swift
ImageMetalling-07/ImageMetalling-07.xcodeproj/: project.pbxproj
ImageMetalling-07/ImageMetalling-07.xcworkspace/: contents.xcworkspacedata
ImageMetalling-08/: Podfile
ImageMetalling-08/ImageMetalling-08/: AppDelegate.swift  IMPDocument.swift  IMPMenuHandler.swift  IMPPaletteListView.swift  IMPPaletteSolver.swift  IMPTestFilter.swift  ViewController.swift
ImageMetalling-08/ImageMetalling-08.xcodeproj/: project.pbxproj
ImageMetalling-08/ImageMetalling-08.xcworkspace/: contents.xcworkspacedata
ImageMetalling-09/: Podfile
ImageMetalling-09/ImageMetalling-09/: AppDelegate.swift  IMPDocument.swift  IMPMenuHandler.swift  Info.plist  ViewController.swift
ImageMetalling-09/ImageMetalling-09.xcodeproj/: project.pbxproj
ImageMetalling-09/ImageMetalling-09.xcworkspace/: contents.xcworkspacedata
ImageMetalling-10/: Podfile
ImageMetalling-10/ImageMetalling-10/: AppDelegate.swift  IMPDocument.swift  IMPMenuHandler.swift  ViewController.swift
ImageMetalling-10/ImageMetalling-10.xcodeproj/: project.pbxproj
ImageMetalling-10/ImageMetalling-10.xcworkspace/: contents.xcworkspacedata
ImageMetalling-11/: Podfile
ImageMetalling-11/ImageMetalling-11/: AppDelegate.swift  IMPAssets.swift  IMPPhotoEditor.swift  ViewController.swift
ImageMetalling-11/ImageMetalling-11.xcodeproj/: project.pbxproj
ImageMetalling-11/ImageMetalling-11.xcworkspace/: contents.xcworkspacedata
ImageMetalling-12/: Podfile
ImageMetalling-12/ImageMetalling-12/: AppDelegate.swift  Info.plist  ViewController.swift
ImageMetalling-12/ImageMetalling-12.xcodeproj/: project.pbxproj
ImageMetalling-12/ImageMetalling-12.xcworkspace/: contents.xcworkspacedata
ImageMetalling-13/: Podfile
ImageMetalling-13/ImageMetalling-13/: AppDelegate.swift  Info.plist  ViewController.swift
ImageMetalling-13/ImageMetalling-13.xcodeproj/: project.pbxproj
ImageMetalling-13/ImageMetalling-13.xcworkspace/: contents.xcworkspacedata
ImageMetalling-14/: Podfile
ImageMetalling-14/IMPPlayground.playground/: Contents.swift  contents.xcplayground  timeline.xctimeline
ImageMetalling-14/ImageMetalling-14.xcodeproj/: project.pbxproj
ImageMetalling-15/: Podfile
ImageMetalling-16/: Podfile
ImageMetalling-17/: CMakeLists.txt  Readme.md
ImageMetalling-17/ofx/: CMakeLists.txt  Defaults.cpp  Defaults.h  DeviceCache.h  DeviceCache.mm  Factory.cpp  Factory.h  FactoryUtils.cpp  FactoryUtils.h  Log.cpp  Log.h  PluginPaths.h
ImageMetalling-17/ofx/kernels/: FalseColorKernel.h  FalseColorKernel.mm  Function.h  Function.mm  GpuConfig.h  Kernel.h  Kernel.mm
ImageMetalling-17/ofx/lib/: CMakeLists.txt  Defaults.h  GpuConfig.h  Image.cpp  Image.h  Image2Texture.h  Image2Texture.mm  ImageFromTexture.h  ImageFromTexture.mm  Processor.cpp  Processor.h
ImageMetalling-17/ofx/lib/kernels/: FalseColorKernel.h  FalseColorKernel.mm  Function.h  Function.mm  GpuConfig.h  Kernel.h  Kernel.mm  PassKernel.h  PassKernel.mm
ImageMetalling-17/ofx/lib/shaders/: CMakeLists.txt  ImageMetalling.metal
ImageMetalling-17/ofx/plugin/: CMakeConfig.in  CMakeLists.txt  Factory.cpp  Factory.h  Interaction.cpp  Interaction.h  Names.h  Plugin.cpp  Plugin.h  Processor.cpp  Processor.h  Registry.cpp
ImageMetalling-17/ofx/plugin/installer/config/: config.xml.in
ImageMetalling-17/ofx/shaders/: CMakeLists.txt  ImageMetalling.metal
(+228 files in other folders)
